[package]
name = "shared_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
regex = "1.11.1"
image = { version = "0.25.6", features = ["png", "jpeg", "tga", "bmp"] }
configparser = "3.0.2"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1"
md-5 = "0.10"
rc4 = "0.1"
rw_dff = { path = "../rw_dff" }
rw_dff_model = { path = "../rw_dff_model" }